# Course_work_3

./: .gitignore  README.md  main.py  operations.json  pyproject.toml  requirements.txt  utils.py
tests/: conftest.py  test_utils.py
